<resources>
    <string name="app_name">91ft</string>
    <string name="toolbar_login">로그인</string>
    <string name="toolbar_signup">회원가입</string>
    <string name="toolbar_friend_list">친구목록</string>
    <string name="toolbar_friend_info">친구정보</string>
    <string name="toolbar_friend_add">친구등록</string>
    <string name="toolbar_friend_update">친구수정</string>
    <string name="toolbar_gift_list">선물목록</string>
    <string name="toolbar_gift_add">선물등록</string>
    <string name="toolbar_gift_update">선물수정</string>
    <string name="toolbar_gift_receive">받은선물</string>
    <string name="toolbar_gift_give">보낸선물</string>
    <string name="toolbar_forget_passwd">비밀번호 재설정</string>
    <string name="title_close">닫기</string>
    <string name="title_home">홈</string>
    <string name="btn_addImg">사진등록</string>
    <string name="btn_gift_add">선물등록</string>
    <string name="btn_save">저장</string>
    <string name="btn_update">수정</string>
    <string name="btn_delete">삭제</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_login">로그인</string>
    <string name="btn_signup">회원가입</string>
    <string name="btn_email_login">이메일로 로그인</string>
    <string name="btn_google_login">구글 아이디로 로그인</string>
    <string name="btn_check">확인</string>
    <string name="tv_name">이름</string>
    <string name="tv_date">날짜</string>
    <string name="tv_title">제목</string>
    <string name="tv_memo">메모</string>
    <string name="tv_email">이메일</string>
    <string name="tv_passwd">비밀번호</string>
    <string name="tv_passwd_check">비밀번호 확인</string>
    <string name="tv_gift_list">선물 목록</string>
    <string name="tv_gift_memo_count_before">0/100</string>
    <string name="tv_gift_memo_count_after">/100</string>
    <string name="tv_progress_title">잠시만 기다려주세요.</string>
    <string name="tv_logout">로그아웃</string>
    <string name="tv_user_delete">회원탈퇴</string>
    <string name="desc_main">정성스런 선물을 주고받았을 때의 감정과 느낌을</string>
    <string name="desc_sub">senty와 함께 기록해보세요.</string>
    <string name="desc_signup_email">비밀번호를 재설정할 때 사용되는 이메일이므로 실제 사용하는 이메일을 입력하세요.</string>
    <string name="desc_signup_passwd">8자 이상 입력하세요.</string>
    <string name="desc_close">현재 창 닫기</string>
    <string name="desc_home">홈 화면으로 이동</string>
    <string name="desc_fab_friend_add">친구 등록 버튼</string>
    <string name="desc_fab_gift_add">선물 등록 버튼</string>
    <string name="desc_gift_img">선물 사진</string>
    <string name="radio_receive">받은 선물</string>
    <string name="radio_give">보낸 선물</string>
    <string name="friend_menu_info">정보조회</string>
    <string name="friend_menu_gift">선물목록</string>
    <string name="msg_gift_delete">선택한 선물을 삭제하시겠습니까?</string>
    <string name="msg_forget_passwd">비밀번호 찾기</string>
    <string name="msg_friend_delete_title">친구의 정보를 삭제하시겠습니까?</string>
    <string name="msg_friend_delete_content">친구와 주고받은 선물의 목록도 함께 삭제됩니다.</string>
    <string name="msg_friend_delete">친구의 정보가 삭제되었습니다.</string>
    <string name="msg_complete_signup">회원가입이 완료되었습니다.</string>
    <string name="msg_failed_signup">회원가입에 실패하였습니다.</string>
    <string name="msg_user_delete_title">회원탈퇴를 진행하시겠습니까?</string>
    <string name="msg_user_delete_content">저장했던 친구/선물 정보는 모두 삭제됩니다.</string>
    <string name="toast_empty_email">이메일을 입력해주세요.</string>
    <string name="toast_empty_password">비밀번호를 입력해주세요.</string>
    <string name="toast_send_email">비밀번호 재설정 이메일이 발송되었습니다.</string>
    <string name="toast_user_logout">로그아웃 되었습니다.</string>
    <string name="toast_user_delete">정상적으로 회원탈퇴 완료되었습니다.</string>
    <string name="toast_email_invalid_exception">이메일 형식으로 입력해주세요.</string>
    <string name="toast_email_collision_exception">이미 존재하는 이메일입니다.</string>
    <string name="toast_login_exception">이메일 또는 비밀번호를 확인해주세요.</string>
    <string name="toast_empty_gift_title">제목을 입력해주세요.</string>
    <string name="toast_empty_friend_title">이름을 입력해주세요.</string>
    <string name="helper_input_password">영문자, 숫자로 입력해주세요. (8자 이상)</string>
    <string name="error_input">필수입력입니다.</string>
    <string name="error_input_email">이메일 형식으로 입력해주세요.</string>
    <string name="error_input_password">영문자, 숫자로 입력해주세요.</string>
    <string name="error_input_password_length">8자 이상 입력해주세요.</string>
    <string name="error_input_password_check">비밀번호와 일치하지 않습니다.</string>
    <string name="signup_title">회원가입</string>
    <string name="signup_email_title">이메일</string>
    <string name="signup_email_title_sub1">비밀번호를 재설정할 때 사용되는 이메일입니다.</string>
    <string name="signup_email_title_sub2">실제 사용하시는 이메일을 입력해주세요.</string>
    <string name="signup_email_hint_text">이메일 입력</string>
    <string name="signup_password_title">비밀번호</string>
    <string name="signup_password_title_sub1">영문자/숫자로 입력해주세요. (8자 이상)</string>
    <string name="signup_password_hint_text">비밀번호 입력</string>
    <string name="signup_password_confirm_hint_text">비밀번호 확인</string>
    <string name="signup_error1">필수입력입니다.</string>
    <string name="signup_error_email">이메일 형식으로 입력해주세요.</string>
    <string name="signup_error_password">8자 이상의 영문자, 숫자로 입력해주세요.</string>
    <string name="signup_error_password_confirm">비밀번호와 일치하지 않습니다.</string>
    <string name="signup_error_check_email">이미 존재하는 이메일입니다.</string>
    <string name="signup_msg_complete">회원가입이 완료되었습니다.</string>
    <string name="reset_password_title">비밀번호 재설정</string>
    <string name="reset_password_email_text">이메일</string>
    <string name="reset_password_hint_text">이메일 입력</string>
    <string name="reset_password_toast_text">메일이 발송되었습니다.</string>
    <string name="login_title">로그인</string>
    <string name="login_email_hint_text">이메일</string>
    <string name="login_password_hint_text">비밀번호</string>
    <string name="login_auto_text">자동 로그인</string>
    <string name="login_find_passowrd_text">비밀번호 재설정</string>
    <string name="login_error_message">아이디 또는 비밀번호가 일치하지 않습니다.</string>
    <string name="home_anniversary_title">다가오는 기념일</string>
    <string name="home_anniversary_empty_text">기념일을 등록해보세요.</string>
    <string name="home_anniversary_label_before">지난 기념일</string>
    <string name="home_anniversary_label_today">오늘</string>
    <string name="home_anniversary_label_after">일 후</string>
    <string name="home_gift_received_title">최근 받은 선물</string>
    <string name="home_gift_sent_title">최근 준 선물</string>
    <string name="home_gift_loading_text">선물을 불러오고 있습니다.</string>
    <string name="home_gift_received_empty_text">받은 선물을 등록해보세요.</string>
    <string name="home_gift_sent_empty_text">준 선물을 등록해보세요.</string>
    <string name="home_gift_show_all_text">선물\n전체보기</string>
    <string name="friend_title">친구 목록</string>
    <string name="friend_empty_group_all_text">등록된 친구가 존재하지 않습니다.\n새로운 친구를 등록해보세요.</string>
    <string name="friend_empty_group_text"> 그룹에 등록된 친구가 없어요.\n새로운 친구를 추가해보세요!</string>
    <string name="friend_detail_title">친구</string>
    <string name="friend_detail_delete_title">친구를 삭제하시겠습니까?</string>
    <string name="friend_detail_delete_message_text">친구와 주고받았던 선물들도 모두 함께 삭제되며, 복원이 불가능합니다.\n선택한 친구의 정보를 삭제하시겠습니까?</string>
    <string name="friend_detail_name_text">이름</string>
    <string name="friend_detail_group_text">그룹</string>
    <string name="friend_detail_birthday_text">생일</string>
    <string name="friend_detail_memo_text">메모</string>
    <string name="friend_detail_gift_empty_text">등록된 선물이 없습니다.\n새로운 선물을 등록해보세요!</string>
    <string name="friend_title_add">친구 등록</string>
    <string name="friend_title_edit">친구 수정</string>
    <string name="friend_edit_name_text">이름</string>
    <string name="friend_edit_name_hint_text">이름 입력</string>
    <string name="friend_edit_group_text">그룹</string>
    <string name="friend_edit_group_hint_text">그룹 선택</string>
    <string name="friend_edit_birthday_text">생일</string>
    <string name="friend_edit_birthday_hint_text">생일 입력</string>
    <string name="friend_edit_birthday_checkable_text">생략하기</string>
    <string name="friend_edit_memo_text">메모</string>
    <string name="friend_detail_tab_info_text">정보</string>
    <string name="friend_detail_tab_gift_text">선물</string>
    <string name="friend_edit_name_error_text">이름을 입력해주세요.</string>
    <string name="friend_edit_group_error_text">그룹을 선택해주세요.</string>
    <string name="friend_group_title">친구 그룹</string>
    <string name="friend_group_title_save">친구 그룹 등록</string>
    <string name="friend_group_title_edit">친구 그룹 수정</string>
    <string name="friend_group_title_read">친구 그룹 선택</string>
    <string name="friend_group_name_hint_text">그룹명 입력 (최대 8자)</string>
    <string name="friend_group_error">그룹명을 입력해주세요.</string>
    <string name="friend_group_complete_save_text">등록이 완료되었습니다.</string>
    <string name="friend_group_complete_edit_text">수정이 완료되었습니다.</string>
    <string name="friend_group_selection_edit_button_text">그룹 편집</string>
    <string name="friend_group_delete_title">그룹을 삭제하시겠습니까?</string>
    <string name="friend_group_delete_text">해당 그룹의 친구도 모두 함께 삭제되며, 삭제된 그룹은 복구가 불가능합니다.</string>
    <string name="friend_group_empty_text">친구 그룹이 존재하지 않습니다.\n새로운 그룹을 등록해보세요!</string>
    <string name="gift_title">선물 목록</string>
    <string name="gift_tab_title_all">전체</string>
    <string name="gift_tab_title_received">받은 선물</string>
    <string name="gift_tab_title_sent">준 선물</string>
    <string name="gift_empty_text_all">등록된 선물이 없습니다.\n새로운 선물을 등록해보세요!</string>
    <string name="gift_empty_text_received">받은 선물이 없습니다.\n받은 선물을 등록해보세요!</string>
    <string name="gift_empty_text_sent">준 선물이 없습니다.\n준 선물을 등록해보세요!</string>
    <string name="gift_edit_title_save">선물 등록</string>
    <string name="gift_edit_title_edit">선물 수정</string>
    <string name="gift_edit_image_selection_type_camera">카메라를 통해\n이미지 가져오기</string>
    <string name="gift_edit_image_selection_type_gallery">갤러리를 통해\n이미지 가져오기</string>
    <string name="gift_edit_image_text">사진 등록</string>
    <string name="gift_edit_category_text">카테고리</string>
    <string name="gift_edit_category_hint_text">카테고리 선택</string>
    <string name="gift_edit_category_error_text">카테고리를 선택해주세요.</string>
    <string name="gift_edit_friend_text">친구</string>
    <string name="gift_edit_friend_hint_text">친구 선택</string>
    <string name="gift_edit_friend_error_text">친구를 선택해주세요.</string>
    <string name="gift_edit_date_text">날짜</string>
    <string name="gift_edit_date_hint_text">날짜 선택</string>
    <string name="gift_edit_date_error_text">날짜를 선택해주세요.</string>
    <string name="gift_edit_mood_text">기분</string>
    <string name="gift_edit_mood_hint_text">기분 입력</string>
    <string name="gift_edit_memo_text">메모</string>
    <plurals name="gift_image_picker_title">
        <item quantity="other">%s/%s</item>
    </plurals>
    <string name="gift_image_editor_title">사진 편집</string>
    <string name="gift_image_editor_save_dialog_title">편집을 저장하시겠습니까?</string>
    <string name="gift_image_preview_titile">미리보기</string>
    <string name="friend_selection_title">친구 선택</string>
    <string name="friend_selection_empty_text">친구 목록이 존재하지 않습니다.\n친구를 등록해보세요!</string>
    <string name="friend_selection_empty_button_text">친구 등록</string>
    <string name="category_selection_title">선물 카테고리 선택</string>
    <string name="category_selection_empty_text">선물 카테고리가 존재하지 않습니다.\n카테고리를 등록해보세요!</string>
    <string name="category_selection_empty_button_text">선물 카테고리 등록</string>
    <string name="category_selection_edit_button_text">선물 카테고리 등록</string>
    <string name="gift_detail_received_title">받은 선물</string>
    <string name="gift_detail_sent_title">준 선물</string>
    <string name="gift_detail_delete_title">삭제하시겠습니까?</string>
    <string name="gift_detail_delete_message_text">삭제된 선물은 복구가 불가능합니다.</string>
    <string name="gift_categories_title">선물 카테고리</string>
    <string name="gift_categories_delete_title">카테고리를 삭제하시겠습니까?</string>
    <string name="gift_categories_delete_message_text">카테고리에 속해있는 선물도 모두 함께 삭제되며, 삭제된 카테고리/선물은 복구가 불가능합니다.</string>
    <string name="gift_categories_empty_text">선물 카테고리가 존재하지 않습니다.\n새로운 카테고리를 등록해보세요!</string>
    <string name="anniversary_title">기념일</string>
    <string name="anniversary_label_today_text">오늘</string>
</resources>