<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mainActivity"
            type="com.w36495.senty.view.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/desc_main"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/desc_sub"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/btn_all_rounded_dark_gray"
                android:text="@string/btn_email_login"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_google_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/senty_gray1"
                android:text="@string/btn_google_login"
                android:visibility="invisible"
                app:backgroundTint="@color/senty_gray1" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
