<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="giftDetailDialog"
            type="com.w36495.senty.view.GiftDetailDialog" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_white_rounded"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/gift_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/top_app_bar_close"
            app:title="@string/toolbar_gift_receive"
            app:titleCentered="true" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/gift_detail_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toBottomOf="@id/gift_detail_toolbar"
            app:layout_constraintStart_toStartOf="@id/gift_detail_toolbar"
            app:layout_constraintEnd_toEndOf="@id/gift_detail_toolbar"
            app:layout_constraintBottom_toTopOf="@id/gift_detail_layout1"/>

        <LinearLayout
            android:id="@+id/gift_detail_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/gift_detail_img"
            app:layout_constraintStart_toStartOf="@id/gift_detail_img"
            app:layout_constraintEnd_toEndOf="@id/gift_detail_img"
            app:layout_constraintBottom_toTopOf="@id/gift_detail_layout2">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_date"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/gift_detail_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gift_detail_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/gift_detail_layout1"
            app:layout_constraintStart_toStartOf="@id/gift_detail_layout1"
            app:layout_constraintEnd_toEndOf="@id/gift_detail_layout1"
            app:layout_constraintBottom_toTopOf="@id/gift_detail_layout3">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_title"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/gift_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gift_detail_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/gift_detail_layout2"
            app:layout_constraintStart_toStartOf="@id/gift_detail_layout2"
            app:layout_constraintEnd_toEndOf="@id/gift_detail_layout2">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_memo"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/gift_detail_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gift_detail_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/gift_detail_layout3"
            app:layout_constraintStart_toStartOf="@id/gift_detail_layout3"
            app:layout_constraintEnd_toEndOf="@id/gift_detail_layout3"
            app:layout_constraintBottom_toTopOf="@id/gift_detail_remove" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gift_detail_remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"
            android:backgroundTint="@color/senty_red"
            app:layout_constraintTop_toBottomOf="@id/gift_detail_update"
            app:layout_constraintStart_toStartOf="@id/gift_detail_update"
            app:layout_constraintEnd_toEndOf="@id/gift_detail_update"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
