<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="giftAddActivity"
            type="com.w36495.senty.view.GiftAddActivity" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/gift_add_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/gift_add_img_btn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gift_add_img_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_addImg"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/gift_add_img"
            app:layout_constraintStart_toStartOf="@id/gift_add_img"
            app:layout_constraintEnd_toEndOf="@id/gift_add_img"
            app:layout_constraintBottom_toTopOf="@id/gift_add_type"/>

        <RadioGroup
            android:id="@+id/gift_add_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/gift_add_img_btn"
            app:layout_constraintStart_toStartOf="@id/gift_add_img_btn"
            app:layout_constraintEnd_toEndOf="@id/gift_add_img_btn"
            app:layout_constraintBottom_toTopOf="@id/gift_add_layout1">

            <RadioButton
                android:id="@+id/gift_add_type_receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_receive"/>

            <RadioButton
                android:id="@+id/gift_add_type_give"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_give"
                android:layout_marginStart="8dp"/>

        </RadioGroup>

        <LinearLayout
            android:id="@+id/gift_add_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:weightSum="1"
            app:layout_constraintTop_toBottomOf="@id/gift_add_type"
            app:layout_constraintStart_toStartOf="@id/gift_add_type"
            app:layout_constraintEnd_toEndOf="@id/gift_add_type"
            app:layout_constraintBottom_toTopOf="@id/gift_add_layout2">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_date"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/gift_add_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_date"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/gift_add_date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="날짜선택"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/ic_baseline_calendar_month_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gift_add_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/gift_add_layout1"
            app:layout_constraintStart_toStartOf="@id/gift_add_layout1"
            app:layout_constraintEnd_toEndOf="@id/gift_add_layout1">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_title"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/gift_add_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title"
                android:inputType="text"
                android:layout_marginEnd="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gift_add_layout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/gift_add_layout2"
            app:layout_constraintStart_toStartOf="@id/gift_add_layout2"
            app:layout_constraintEnd_toEndOf="@id/gift_add_layout2"
            app:layout_constraintBottom_toTopOf="@id/gift_add_save">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_memo"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/gift_add_memo"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:hint="@string/hint_memo"
                android:inputType="textMultiLine" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/gift_add_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:background="@drawable/btn_dark_grey"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="@id/gift_add_layout3"
            app:layout_constraintEnd_toEndOf="@id/gift_add_layout3"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
