<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="friendInfoActivity"
            type="com.w36495.senty.view.FriendInfoActivity" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/friend_info_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/friend_info_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/friend_info_img"
            app:layout_constraintStart_toStartOf="@id/friend_info_img"
            app:layout_constraintEnd_toEndOf="@id/friend_info_img">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_name"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/friend_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/friend_info_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/friend_info_layout1"
            app:layout_constraintStart_toStartOf="@id/friend_info_layout1"
            app:layout_constraintEnd_toEndOf="@id/friend_info_layout1">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_phone"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/friend_detail_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="8dp"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/friend_info_gift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_gift_list"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/friend_info_layout2"
            app:layout_constraintStart_toStartOf="@id/friend_info_layout2"
            app:layout_constraintEnd_toEndOf="@id/friend_info_layout2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/friend_info_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update"
            app:layout_constraintTop_toBottomOf="@id/friend_info_gift"
            app:layout_constraintStart_toStartOf="@id/friend_info_gift"
            app:layout_constraintEnd_toEndOf="@id/friend_info_gift"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/friend_info_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"
            app:layout_constraintTop_toBottomOf="@id/friend_info_update"
            app:layout_constraintStart_toStartOf="@id/friend_info_update"
            app:layout_constraintEnd_toEndOf="@id/friend_info_update"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
